--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -3,18 +3,18 @@
 
     <ion-item>
       <ion-label floating>Email Address</ion-label>
-      <ion-input type="text"></ion-input>
+      <ion-input [(ngModel)]="account.email" type="email"></ion-input>
     </ion-item>
 
     <ion-item>
       <ion-label floating>Password</ion-label>
-      <ion-input type="password"></ion-input>
+      <ion-input [(ngModel)]="account.password" type="password"></ion-input>
     </ion-item>
   </ion-card-content>
   <ion-row class="login-form__buttons">
     <div>
       <button ion-button (click)="naviagteToPage('RegisterPage')" color="secondary">Register</button>
-      <button ion-button (click)="naviagteToPage('TabsPage')" color="primary">Login</button>
+      <button ion-button (click)="login()" color="primary">Login</button>
     </div>
   </ion-row>
 </ion-card>
