Component communication with Eventemmiter

--- a/src/components/login-form/login-form.html
+++ b/src/components/login-form/login-form.html
@@ -13,7 +13,7 @@
   </ion-card-content>
   <ion-row class="login-form__buttons">
     <div>
-      <button ion-button (click)="naviagteToPage('RegisterPage')" color="secondary">Register</button>
+      <button ion-button (click)="naviagteToRegisterPage()" color="secondary">Register</button>
       <button ion-button (click)="login()" color="primary">Login</button>
     </div>
   </ion-row>
