--- a/src/components/chat-message/chat-message.html
+++ b/src/components/chat-message/chat-message.html
@@ -1,4 +1,4 @@
-<ion-item *ngIf="chatIndex % 2 === 0; else right">
+<ion-item *ngIf="chatMessage.userToId == userId; else from">
   <ion-avatar item-left>
     <img src="assets/imgs/avatar.png" alt="">
   </ion-avatar>
@@ -7,7 +7,7 @@
 </ion-item>
 
 
-<ng-template #right>
+<ng-template #from>
   <ion-item class="chat-message__message-right">
     <ion-avatar item-right>
       <img src="assets/imgs/avatar.png" alt="">
