--- a/src/components/chat-message/chat-message.html
+++ b/src/components/chat-message/chat-message.html
@@ -1,18 +1,18 @@
-<ion-item *ngIf="chatMessage.userToId == userId; else from">
-  <ion-avatar item-left>
+<ion-item no-lines class="chat-message__message-right" *ngIf="chatMessage.userToId == userId; else from">
+  <ion-avatar item-right>
     <img src="assets/imgs/avatar.png" alt="">
   </ion-avatar>
-  <h2>Emehinola Idowu</h2>
-  <p>message</p>
+  <h2>{{chatMessage?.userFromProfile?.firstName}} {{chatMessage?.userFromProfile?.lastName}}</h2>
+  <p>{{ chatMessage.content}}</p>
 </ion-item>
 
 
 <ng-template #from>
-  <ion-item class="chat-message__message-right">
-    <ion-avatar item-right>
+  <ion-item no-lines>
+    <ion-avatar item-left>
       <img src="assets/imgs/avatar.png" alt="">
     </ion-avatar>
-    <h2>Emehinola Idowu</h2>
-    <p>message</p>
+    <h2>{{chatMessage?.userFromProfile?.firstName}} {{chatMessage?.userFromProfile?.lastName}}</h2>
+    <p>{{ chatMessage.content}}</p>
   </ion-item>
 </ng-template>
